# python-dataflow-demo

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/project/: config.py  db.py  db_init.py  ingest.py  logging_config.py  main.py  validation.py
tests/: conftest.py  test_db.py  test_ingest.py  test_validations.py
