[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "portal_hero"
version = "0.1.0"
dependencies = ["pandas", "SQLAlchemy", "psycopg2-binary"]

[project.optional-dependencies]
dev = ["black", "pytest", "flake8"]

[project.scripts]
ssay = "snakesay.__main__:main"

[tool.black]
line-length = 79
