[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-dataflow-demo"
version = "0.1.0"
dependencies = [
    "pandas>=2.3.3",
    "SQLAlchemy>=2.0",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "black>=25.12",
    "flake8>=7.3",
]

[tool.black]
line-length = 79
